--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,10 @@
         "interface/raspberrypi-swd.cfg",
         "target/rp2040.cfg"
         ],
+      // "openOCDLaunchCommands": [
+      //     "transport select swd",
+      //     "adapter speed 4000"
+      // ],
       "svdFile": "${env:PICO_SDK_PATH}/src/rp2040/hardware_regs/rp2040.svd",
       "runToMain": true,
       // Give restart the same functionality as runToMain
@@ -27,3 +31,4 @@
     }
   ]
 }
+
