--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.13)
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
-
+set(CMAKE_EXPORT_COMPILECOMMANDS ON)
 # initalize pico_sdk from installed location
 # (note this can come from environment, CMake cache etc)
 set(PICO_SDK_PATH "/home/jhees/pico/pico-sdk")
@@ -27,8 +27,8 @@ add_executable(pico_drone main.cpp)
 pico_set_program_name(pico_drone "pico_drone")
 pico_set_program_version(pico_drone "0.1")
 
-pico_enable_stdio_uart(pico_drone 0)
-pico_enable_stdio_usb(pico_drone 1)
+# pico_enable_stdio_uart(pico_drone 0)
+# pico_enable_stdio_usb(pico_drone 1)
 
 # Add the standard library to the build
 target_link_libraries(pico_drone pico_stdlib)
